--- a/app/globals.css
+++ b/app/globals.css
@@ -2,20 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@keyframes slide-right-and-back {
+    0%, 100% { transform: translateX(0); }
+    50% { transform: translateX(10px); }
   }
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-}
+  .animate-slide-right-and-back {
+    animation: slide-right-and-back 2s ease-in-out infinite;
+  }
